--- a/index.html
+++ b/index.html
@@ -18,6 +18,35 @@ section{background:rgba(255,255,255,0.6);padding:18px;border-radius:10px;margin-
 .pill-counter{font-size:20px;font-weight:700;color:var(--accent)}
 footer{padding:12px;text-align:center;color:#666;font-size:14px}
 .btn{display:inline-block;background:var(--accent);color:#fff;padding:10px 14px;border-radius:8px;text-decoration:none;font-weight:700}
+
+/* Falling items styles */
+#falling-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  overflow: hidden;
+  z-index: 9999;
+}
+
+.falling-item {
+  position: absolute;
+  top: -50px;
+  animation: fall linear forwards;
+}
+
+.falling-img {
+  width: 40px;
+  height: auto;
+}
+
+@keyframes fall {
+  to {
+    transform: translateY(110vh);
+  }
+}
 </style>
 </head>
 <body>
@@ -81,9 +110,28 @@ footer{padding:12px;text-align:center;color:#666;font-size:14px}
 Join the community • Follow on X • Share the pill • © $PTP
 </footer>
 
+<!-- Falling items container -->
+<div id="falling-container"></div>
+
 <script>
 // placeholder: if you later have an API to count buys, fetch and put it here.
 document.getElementById('pillCount').textContent = '0';
+
+// Falling image script
+function createFallingItem() {
+  const item = document.createElement("div");
+  item.classList.add("falling-item");
+  item.innerHTML = '<img src="pill.png" class="falling-img">'; 
+  item.style.left = Math.random() * 100 + "vw"; 
+  item.style.animationDuration = 3 + Math.random() * 2 + "s"; 
+  document.getElementById("falling-container").appendChild(item);
+
+  setTimeout(() => {
+    item.remove();
+  }, 5000);
+}
+
+setInterval(createFallingItem, 500);
 </script>
 </body>
 </html>
