--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ footer{padding:12px;text-align:center;color:#666;font-size:14px}
 <img src="banner.jpg" alt="$PTP banner (replace with your banner file)">
 <div>
 <h1>$PTP <span class="tag">Take the Pill. Promote the Fun. Give Back.</span></h1>
-<div style="margin-top:6px">Ticker: <strong>$PTP</strong> • Creator fees recycled for buybacks & donations</div>
+<div style="margin-top:6px">Ticker: <strong>$PTP</strong> • Creator fees recycled for buybacks & donations.(UPDATES MADE DAILY)</div>
 </div>
 </header>
 
@@ -70,7 +70,7 @@ footer{padding:12px;text-align:center;color:#666;font-size:14px}
 <h2>Roadmap</h2>
 <ul>
 <li>Phase 1: Launch & social growth</li>
-<li>Phase 2: First giveback event</li>
+<li>Phase 2: First giveback event(9/25/25)</li>
 <li>Phase 3: Buyback pushes</li>
 <li>Phase 4: Partnerships and expansion</li>
 </ul>
@@ -84,7 +84,7 @@ footer{padding:12px;text-align:center;color:#666;font-size:14px}
 
 <div style="padding:12px;background:#fff;border-radius:8px">
 <h3>Transparency</h3>
-<p>Creator wallet: <code>[PASTE WALLET]</code></p>
+<p>Creator wallet: <code>[73KQGoT8tsbhfg8oA7K9DX2F6TdpPvfgwN8LPvMLv8JW]</code></p>
 <a class="btn" href="#transparency">See updates</a>
 </div>
 </aside>
