--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ footer{padding:12px;text-align:center;color:#666;font-size:14px}
 
 <div style="padding:12px;background:#fff;border-radius:8px">
 <h3>Transparency</h3>
-<p>Creator wallet: <code>[73KQGoT8tsbhfg8oA7K9DX2F6TdpPvfgwN8LPvMLv8JW]</code></p>
+<p>Creator wallet: <code>ix8gk8bgrdGaaAQSSbAvzmvyWsXUqptLAotKbcwPCYJ</code></p>
 <a class="btn" href="#transparency">See updates</a>
 </div>
 </aside>
