--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ footer{padding:12px;text-align:center;color:#666;font-size:14px}
 <img src="banner.jpg" alt="$PTP banner (replace with your banner file)">
 <div>
 <h1>$PTP <span class="tag">Take the Pill. Promote the Fun. Give Back.</span></h1>
-<div style="margin-top:6px">Ticker: <strong>$PTP</strong> • Creator fees recycled for buybacks & donations.(UPDATES MADE DAILY)</div>
+<div style="margin-top:6px">Ticker: <strong>$PTP</strong> • Creator fees recycled for buybacks & donations</div>
 </div>
 </header>
 
@@ -70,7 +70,7 @@ footer{padding:12px;text-align:center;color:#666;font-size:14px}
 <h2>Roadmap</h2>
 <ul>
 <li>Phase 1: Launch & social growth</li>
-<li>Phase 2: First giveback event(9/25/25)</li>
+<li>Phase 2: First giveback event</li>
 <li>Phase 3: Buyback pushes</li>
 <li>Phase 4: Partnerships and expansion</li>
 </ul>
@@ -84,7 +84,7 @@ footer{padding:12px;text-align:center;color:#666;font-size:14px}
 
 <div style="padding:12px;background:#fff;border-radius:8px">
 <h3>Transparency</h3>
-<p>Creator wallet: <code>ix8gk8bgrdGaaAQSSbAvzmvyWsXUqptLAotKbcwPCYJ</code></p>
+<p>Creator wallet: <code>[PASTE WALLET]</code></p>
 <a class="btn" href="#transparency">See updates</a>
 </div>
 </aside>
@@ -114,8 +114,26 @@ Join the community • Follow on X • Share the pill • © $PTP
 <div id="falling-container"></div>
 
 <script>
-// placeholder: if you later have an API to count buys, fetch and put it here.
-document.getElementById('pillCount').textContent = '0';
+// Show loading initially
+document.getElementById('pillCount').textContent = '...';
+
+async function updatePillCounter() {
+  try {
+    // Solscan API for token holders (limit=1 for fast response, total property gives full count)
+    const response = await fetch(
+      'https://public-api.solscan.io/token/holders?tokenAddress=73KQGoT8tsbhfg8oA7K9DX2F6TdpPvfgwN8LPvMLv8JW&limit=1'
+    );
+    if (!response.ok) throw new Error("API error");
+    const data = await response.json();
+    document.getElementById('pillCount').textContent = data.total || '0';
+  } catch (e) {
+    document.getElementById('pillCount').textContent = '—';
+  }
+}
+
+// Update on page load and every 30 seconds
+updatePillCounter();
+setInterval(updatePillCounter, 30000);
 
 // Falling image script
 function createFallingItem() {
